--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.6.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
